# TMS_homework

Hometask/less_10/: task_1.py  task_2.py
Hometask/less_11/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
Hometask/less_12/: task_1_2.py  task_3_4.py  task_5.py  task_6.py  task_6_7.py
Hometask/less_13/: main.py
Hometask/less_13/shops/: __init__.py  abstracts.py  my_exeption.py  products.py  shop.py
Hometask/less_14/: `lesson14.sql
Hometask/less_15/: SQLAlchemy.py
Hometask/less_17_Flask/: app.py  crud.py  models.py  my.db  pyproject.toml
Hometask/less_17_Flask/static/: main.css
Hometask/less_17_Flask/templates/: main_page.html  note_page.html  uuid_page.html
Hometask/less_9/: main.py
Hometask/less_9/4_task/: geojson.json  geojson.py
